@@ -55,6 +55,8 @@ Changes log
         - Fixed bug in ServerResource when content negotiation was
           disabled, all non standard methods where invoking the OPTIONS
           method. 
+        - Fixed ClientResource to throw ResourceException upon error
+          as specified in Javadocs. Reported by Patrick Logan.
     - Enhancements
         - Improved JAXB converted. Contributed by Sanjay Acharya.
         - Upgraded Apache Commons Logging to version 1.1.1.
